# Raytracer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: Conan.cmake
scripts/: format.sh
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Makefile  Ray.h  Renderer.cpp  Renderer.h  Renderer.hpp  Scene.cpp  Scene.h  Scene.hpp  Window.cpp  Window.h  log.cpp  log.h  log.hpp  main.cpp  vec_utilities.h  vec_utilities.hpp
src/materials/: Dielectric.cpp  Dielectric.h  Dielectric.hpp  Emissive.cpp  Emissive.h  Emissive.hpp  Lambertian.cpp  Lambertian.h  Lambertian.hpp  Material.h  Material.hpp  Metal.cpp  Metal.h  Metal.hpp
src/sas/: AABB.cpp  AABB.h  AABB.hpp  BVH.cpp  BVH.h  BVH.hpp
src/shapes/: Plane.cpp  Plane.h  Plane.hpp  Shape.h  Shape.hpp  Sphere.cpp  Sphere.h  Sphere.hpp
